--- a/.hlint.yaml
+++ b/.hlint.yaml
@@ -53,6 +53,7 @@
 - ignore: {name: Eta reduce}
 - ignore: {name: Use camelCase}
 - ignore: {name: Use if}
+- ignore: {name: Use first}
 # Define some custom infix operators
 # - fixity: infixr 3 ~^#^~
 
