moved to generic lens labels

--- a/.hlint.yaml
+++ b/.hlint.yaml
@@ -54,6 +54,7 @@
 - ignore: {name: Use camelCase}
 - ignore: {name: Use if}
 - ignore: {name: Use first}
+- ignore: {name: Unnecessary hiding}
 # Define some custom infix operators
 # - fixity: infixr 3 ~^#^~
 
