--- a/chart-unit.cabal
+++ b/chart-unit.cabal
@@ -3,7 +3,7 @@
 -- see: https://github.com/sol/hpack
 
 name:           chart-unit
-version:        0.6.0.0
+version:        0.5.4.1
 synopsis:       Native haskell charts.
 description:    .
                 <<https://tonyday567.github.io/other/mainExample.svg>>
@@ -35,6 +35,7 @@ extra-source-files:
   other/arrowHudExample.svg
   other/arrowsExample.svg
   other/axisExample.svg
+  other/barExample.svg
   other/clippingExample.svg
   other/glineChart_Example.svg
   other/glineHudExample.svg
@@ -106,7 +107,7 @@ library
     base >=4.7 && <5,
     generic-lens,
     lens,
-    numhask >=0.0.5 && <1,
+    numhask,
     protolude,
     text,
     time,
@@ -118,7 +119,7 @@ library
     foldl,
     formatting,
     linear,
-    numhask-range >=0.0.3 && <1,
+    numhask-range,
     palette
   default-language: Haskell2010
   default-extensions: DeriveGeneric DeriveTraversable FlexibleContexts FlexibleInstances InstanceSigs MultiParamTypeClasses NegativeLiterals NoImplicitPrelude OverloadedStrings PatternSynonyms RankNTypes TypeFamilies UnicodeSyntax
@@ -135,7 +136,7 @@ executable chart-source-examples
     base >=4.7 && <5,
     generic-lens,
     lens,
-    numhask >=0.0.5 && <1,
+    numhask,
     protolude,
     text,
     time,
@@ -161,7 +162,7 @@ test-suite test
     base >=4.7 && <5,
     generic-lens,
     lens,
-    numhask >=0.0.5 && <1,
+    numhask,
     protolude,
     text,
     time,
