--- a/chart-unit.cabal
+++ b/chart-unit.cabal
@@ -3,7 +3,7 @@
 -- see: https://github.com/sol/hpack
 
 name:           chart-unit
-version:        0.5.4
+version:        0.5.5.0
 synopsis:       Native haskell charts.
 description:    .
                 <<https://tonyday567.github.io/other/mainExample.svg>>
@@ -112,7 +112,8 @@ library
     linear,
     numhask >=0.0.5 && <1,
     numhask-range >=0.0.3 && <1,
-    palette
+    palette,
+    scientific
   default-language: Haskell2010
   default-extensions: DeriveGeneric DeriveTraversable FlexibleContexts FlexibleInstances InstanceSigs MultiParamTypeClasses NegativeLiterals NoImplicitPrelude OverloadedStrings PatternSynonyms RankNTypes TypeFamilies UnicodeSyntax
 
