--- a/chart-unit.cabal
+++ b/chart-unit.cabal
@@ -30,7 +30,7 @@ copyright:      2016 Tony Day
 license:        BSD3
 license-file:   LICENSE
 build-type:     Simple
-cabal-version:  >= 1.10
+cabal-version:  >= 1.18
 
 extra-doc-files:
     other/arrowChart_Example.svg
@@ -147,7 +147,7 @@ executable chart-unit-gallery
     , formatting
     , generic-lens-labels
     , lens
-    , mwc-probability
+    , mwc-probability >= 1.2.0 && < 2
     , mwc-random
     , numhask
     , numhask-histogram
