--- a/chart-unit.cabal
+++ b/chart-unit.cabal
@@ -32,57 +32,7 @@ build-type:     Simple
 cabal-version:  >= 1.18
 
 extra-doc-files:
-    other/arrowChart_Example.svg
-    other/arrowHudExample.svg
-    other/arrowsExample.svg
-    other/axisExample.svg
-    other/barExample.svg
-    other/clippingExample.svg
-    other/glineChart_Example.svg
-    other/glineHudExample.svg
-    other/glyph_Example.svg
-    other/glyphChart_Example.svg
-    other/glyphHudExample.svg
-    other/glyphsExample.svg
-    other/gridExample.svg
-    other/histDiffExample.svg
-    other/hud.svg
-    other/hudExample.svg
-    other/labelledBarExample.svg
-    other/labelledExample.svg
-    other/legendExample.svg
-    other/lglyphChart_Example.svg
-    other/lglyphHudExample.svg
-    other/lglyphsExample.svg
-    other/lineChart_Example.svg
-    other/lineHudExample.svg
-    other/linesExample.svg
-    other/mainExample.svg
-    other/pixel_Example.svg
-    other/pixelChart_Example.svg
-    other/pixelHudExample.svg
-    other/pixelsExample.svg
-    other/q24Example.svg
-    other/q7Example.svg
-    other/rect_Example.svg
-    other/rectChart_Example.svg
-    other/rectHudExample.svg
-    other/rectsExample.svg
-    other/scaleExample.svg
-    other/scatterHistExample.svg
-    other/schoolbookExample.svg
-    other/scratch.svg
-    other/scratchpad.svg
-    other/skinnyExample.svg
-    other/test1.svg
-    other/test2.svg
-    other/testTextDiffs.svg
-    other/text_Example.svg
-    other/textChart_Example.svg
-    other/textHudExample.svg
-    other/textsExample.svg
-    other/timeExample.svg
-    other/withHudExample.svg
+    other/*.svg
 
 extra-source-files:
     stack.yaml
