--- a/chart-unit-tests/stack.yaml
+++ b/chart-unit-tests/stack.yaml
@@ -1,9 +1,8 @@
 resolver: lts-10.10
 
 packages:
-  - chart-unit
-  - chart-unit-tests
-  - chart-unit-examples
+  - .
+  - ../chart-unit
 
 extra-deps:
   - generic-lens-labels-0.1.0.2
