--- a/chart-unit/stack.yaml
+++ b/chart-unit/stack.yaml
@@ -3,5 +3,12 @@ resolver: nightly-2018-06-05
 packages:
   - .
 
-extra-deps: []
+extra-deps:
+  - generic-lens-labels-0.1.0.2
+  - numhask-histogram-0.1.3.0
+  - numhask-prelude-0.1.0.1
+  - numhask-0.2.3.0
+  - numhask-test-0.1.0.0
+  - numhask-range-0.2.3.1
+
 
