--- a/stack.yaml
+++ b/stack.yaml
@@ -1,15 +1,28 @@
-resolver: nightly-2018-06-05
+resolver: nightly-2018-08-17
 
 packages:
   - chart-unit
   - chart-unit-examples
 
 extra-deps:
+  - github: tonyday567/numhask
+    commit: 06f4cb735871dc3d7efe54b8827340bcb9d1efa4
+    subdirs:
+      - numhask
+      - numhask-prelude
+      - numhask-hedgehog
+  - github: tonyday567/numhask-range
+    commit: 2e3c655c3e23a314f17115de0edb96a8421d7373
+    subdirs:
+      - numhask-range
+      - numhask-histogram
+
   - generic-lens-labels-0.1.0.2
-  - numhask-histogram-0.1.3.0
-  - numhask-prelude-0.1.0.1
-  - numhask-0.2.3.0
-  - numhask-test-0.1.0.0
-  - numhask-range-0.2.3.1
+  - SVGFonts-1.7
+  - diagrams-lib-1.4.2.3
+  - diagrams-svg-1.4.2
+  - active-0.2.0.13
+  - diagrams-core-1.4.1.1
+  - dual-tree-0.2.2
 
 allow-newer: true
