--- a/stack.yaml
+++ b/stack.yaml
@@ -3,19 +3,24 @@ resolver: nightly-2018-08-17
 packages:
   - chart-unit
   - chart-unit-examples
+  - ../numhask/numhask
+  - ../numhask/numhask-prelude
+  - ../numhask/numhask-hedgehog
+  - ../numhask-range/numhask-range
+  - ../numhask-range/numhask-histogram
 
 extra-deps:
-  - github: tonyday567/numhask
-    commit: 06f4cb735871dc3d7efe54b8827340bcb9d1efa4
-    subdirs:
-      - numhask
-      - numhask-prelude
-      - numhask-hedgehog
-  - github: tonyday567/numhask-range
-    commit: 2e3c655c3e23a314f17115de0edb96a8421d7373
-    subdirs:
-      - numhask-range
-      - numhask-histogram
+#  - github: tonyday567/numhask
+#    commit: 06f4cb735871dc3d7efe54b8827340bcb9d1efa4
+#    subdirs:
+#      - numhask
+#      - numhask-prelude
+#      - numhask-hedgehog
+#  - github: tonyday567/numhask-range
+#    commit: 2e3c655c3e23a314f17115de0edb96a8421d7373
+#    subdirs:
+#      - numhask-range
+#      - numhask-histogram
 
   - generic-lens-labels-0.1.0.2
   - SVGFonts-1.7
